<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iamroot.towerdefense.towerdefense.SettingsMenu"
    android:background="#000000">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_game_music"
        android:id="@+id/switch_game_music"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#ffffff"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:textSize="20sp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_game_sound_effects"
        android:id="@+id/switch_game_sound_effects"
        android:background="#ffffff"
        android:checked="false"
        android:textSize="20sp"
        android:layout_below="@+id/switch_game_music"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/switch_game_music"
        android:layout_alignEnd="@+id/switch_game_music"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_guide"
        android:id="@+id/button_guide"
        android:layout_below="@+id/switch_game_sound_effects"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"
        android:onClick="guideMain"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_about"
        android:id="@+id/button_about"
        android:textSize="20sp"
        android:layout_below="@+id/button_guide"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button_guide"
        android:layout_alignEnd="@+id/button_guide"
        android:layout_marginTop="15dp"
        android:onClick="aboutMain"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_terms"
        android:id="@+id/button_terms"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:layout_below="@+id/button_about"
        android:onClick="termsMain"/>

</RelativeLayout>
