<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iamroot.towerdefense.towerdefense.MainActivity"
    android:id="@+id/playbtn"
    android:background="#000000">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_play"
        android:id="@+id/playbtn"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="false"
        android:textSize="20sp"
        android:onClick="playMenu"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_store"
        android:id="@+id/storebtn"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/playbtn"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:onClick="storeMenu"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_settings"
        android:id="@+id/settingsbtn"
        android:layout_below="@+id/storebtn"
        android:layout_alignLeft="@+id/storebtn"
        android:layout_marginTop="23dp"
        android:textSize="20sp"
        android:onClick="settingsMenu"/>

</RelativeLayout>
